--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www.mjs",
-    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
-    "db:migrate": "node prisma/custom-migrate.js"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
